fix(test): update configuration and package versions for testing tools

--- a/tests/KeenEye.Generators.Tests/KeenEye.Generators.Tests.csproj
+++ b/tests/KeenEye.Generators.Tests/KeenEye.Generators.Tests.csproj
@@ -1,23 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-
-    <!-- xUnit v3 with Microsoft Testing Platform -->
-    <UseMicrosoftTestingPlatform>true</UseMicrosoftTestingPlatform>
-
-    <!-- Disable XML documentation requirements for test projects -->
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.v3" />
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
-    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-    <PackageReference Include="FluentAssertions" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
   </ItemGroup>
 
   <ItemGroup>
