fix(test): project structure was errorenous after merge

--- a/tests/KeenEyes.Core.Tests/KeenEyes.Core.Tests.csproj
+++ b/tests/KeenEyes.Core.Tests/KeenEyes.Core.Tests.csproj
@@ -4,20 +4,8 @@
     <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-
-    <!-- xUnit v3 with Microsoft Testing Platform -->
-    <UseMicrosoftTestingPlatform>true</UseMicrosoftTestingPlatform>
-
-    <!-- Disable XML documentation requirements for test projects -->
-    <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="xunit.v3" />
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport" />
-    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-    <PackageReference Include="FluentAssertions" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\KeenEyes.Core\KeenEyes.Core.csproj" />
