--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -10,6 +10,9 @@
     <NoWarn>$(NoWarn);NU1507;CS1591;CS8618</NoWarn>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
