fix: ignoring links to libhunt

--- a/.github/markdown-link-check-config.json
+++ b/.github/markdown-link-check-config.json
@@ -20,6 +20,9 @@
     },
     {
       "pattern": "^https://www\\.gamedev\\.net/"
+    },
+    {
+      "pattern": "^https://dotnet\\.libhunt\\.com/"
     }
   ],
   "replacementPatterns": [
