--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,9 +67,7 @@ jobs:
 
       - name: Test
         timeout-minutes: 10
-        run: |
-          dotnet test --no-build --configuration Release --verbosity minimal \
-            -- --coverage --coverage-output-format cobertura
+        run: dotnet test --no-build --configuration Release --verbosity normal --coverage --coverage-output-format cobertura --report-github --report-github-summary-include-passed false
 
       - name: Generate coverage report
         uses: danielpalme/ReportGenerator-GitHub-Action@5
