ci: update package locks and add missing files

--- a/src/KeenEyes.Graphics.Silk/KeenEyes.Graphics.Silk.csproj
+++ b/src/KeenEyes.Graphics.Silk/KeenEyes.Graphics.Silk.csproj
@@ -24,7 +24,7 @@
   <ItemGroup>
     <PackageReference Include="Silk.NET.OpenGL" />
     <PackageReference Include="Silk.NET.Maths" />
-    <PackageReference Include="FontStashSharp" />
+    <PackageReference Include="FontStashSharp.PlatformAgnostic" />
   </ItemGroup>
 
 </Project>
