--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,7 +18,7 @@
     <PackageVersion Include="Silk.NET.Windowing" Version="2.22.0" />
     <PackageVersion Include="Silk.NET.Input" Version="2.22.0" />
     <PackageVersion Include="Silk.NET.Maths" Version="2.22.0" />
-    <PackageVersion Include="FontStashSharp" Version="1.3.10" />
+    <PackageVersion Include="FontStashSharp.PlatformAgnostic" Version="1.5.2" />
   </ItemGroup>
   <ItemGroup Label="Physics">
     <PackageVersion Include="BepuPhysics" Version="2.4.0" />
